# GoogleAdsenseBackend

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/middleware/: db_middleware.py
app/models/: __init__.py  models.py
app/routers/: device.py  friend_url_domain.py  profile.py  proxy_ips.py  task.py
app/schemas/: device.py  friend_url_domain.py  profile.py  proxy_ips.py  res.py  task.py  ws.py
app/service/: device.py  friend_url_domain.py  profile.py  proxy_ips.py  task.py
app/user/: crud.py  models.py  router.py  schemas.py  service.py
app/utils/: router_utils.py
tests/: test_user_routes.py
